# rtps

./: Cargo.toml  README.md
.github/workflows/: CI.yml  coverage.yml
implementations/udp/: Cargo.toml
platform-independent-model/: Cargo.toml  README.md
platform-independent-model/src/: lib.rs  messages.rs  structure.rs
platform-independent-model/src/messages/: byte_order.rs  header.rs  message.rs  protocol_id.rs  submessage.rs
platform-independent-model/src/messages/header/: extension.rs
platform-independent-model/src/messages/submessage/: ack_nack.rs  data.rs  data_frag.rs  elements.rs
platform-independent-model/src/structure/: endpoint.rs  entity.rs  group.rs  guid.rs  history.rs  participant.rs
platform-specific-models/udp/: Cargo.toml  README.md
platform-specific-models/udp/src/: model.rs
platform-specific-models/udp/src/model/: messages.rs
platform-specific-models/udp/src/model/messages/submessage/: elements.rs
resources/: workspace.puml
src/: lib.rs  messages.rs  structure.rs
src/messages/: byte_order.rs  header.rs  message.rs  protocol_id.rs  submessage.rs
src/messages/submessage/: ack_nack.rs  data.rs
src/structure/: endpoint.rs  entity.rs  group.rs  guid.rs  history.rs  locator.rs  participant.rs  protocol_version.rs  vendor_id.rs
udp/: Cargo.toml
udp/src/: behaviour.rs  cdr.rs  lib.rs  structure.rs
udp/src/model/messages/submessage/: elements.rs
