[package]
name = "rtps-pim"
description = "implementation of the DDS RTPS protocol Platform-Independent Model (PIM)"
version = "0.1.0"
edition = "2018"
license = "MIT"
repository = "https://github.com/danieleades/rtps"
keywords = ["network","protocol","dds","rtps"]
categories = ["network-programming", "science::robotics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
chrono = "0.4.19"
thiserror = "1.0.30"
vec1 = "1.8.0"

[dev-dependencies]
test-case = "1.2.0"
