[package]
name = "rtps-udp"
description = "UDP-specific implementation of the DDS RTPS protocol"
version = "0.1.0"
edition = "2018"
license = "MIT"
repository = "https://github.com/danieleades/rtps"
keywords = ["network","protocol","dds","rtps"]
categories = ["network-programming", "science::robotics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
rtps-pim = { path = "../platform-independent-model" }
safer-bytes = "0.2.0"
serde = "1.0.130"
thiserror = "1.0.30"

[dev-dependencies]
test-case = "2.0.2"
